--- a/Proyecto1/src/proyecto1/UI.form
+++ b/Proyecto1/src/proyecto1/UI.form
@@ -248,6 +248,9 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="Statistics"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="StatisticsActionPerformed"/>
+      </Events>
       <AuxValues>
         <AuxValue name="JavaCodeGenerator_VariableModifier" type="java.lang.Integer" value="1"/>
       </AuxValues>
